finish midea section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </div>
    
     </div>
+   
     <div class="airtcles">
             <div class="main-contant">
                 <h2 class="main-contant-header">I will Do Coding and Change The World</h2>
@@ -92,7 +93,16 @@
 </div>
 </section>
 </section>
+<section class="media-container">
+    <div class="media-header ">
+        <h2 class=" media-head">My inspiration</h2>
+        <p class="media-paragraph">Jhankar Mahbub is my insturctor.....His guides us very well and the support team always very frindly...This inspired me most</p>
 
+    </div>
+<div class="media-section">
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=mYiIlwQuOihqEP6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</section>
 <section class="about-my- current-target">
    
 <div class="header-current">
@@ -122,6 +132,13 @@
         </div>
   </div>
 
+
+</section>
+<section class="my-next-target">
+    <div next-target-hd>
+<h2>My Next Target</h2>
+<p>My next target is learn React Js. Node js.  Mango BD</p>
+    </div>
 
 </section>
     </main>
