added next learning target

--- a/index.html
+++ b/index.html
@@ -135,15 +135,53 @@
 
 </section>
 <section class="my-next-target">
-    <div next-target-hd>
+    <div class=" next-target-hd">
 <h2>My Next Target</h2>
-<p>My next target is learn React Js. Node js.  Mango BD</p>
+<p>
+    My next target learn ReactJS, NodeJS and MongoBD
+</p>
     </div>
+
+<div class="next-target-description">
+    <div class="next-img">
+        <img src="./assets/react.png" alt="">
+    </div>
+    <div class="learning-item">
+ <h2>ReactJs</h2>
+ <p> I will Learn ReactJS </p>
+    </div>
+</div>
+<div class="next-target-description">
+    <div class="next-img">
+        <img src="./assets/nodejs.png" alt="">
+    </div>
+    <div class="learning-item">
+ <h2>NodeJs</h2>
+ <p>After learning ReactJs I will learn NodeJS</p>
+    </div>
+</div>
+<div class="next-target-description">
+    <div class="next-img">
+        <img src="./assets/mongodb.png" alt="">
+    </div>
+    <div class="learning-item">
+ <h2>MongoBD</h2>
+ <p>After learning NodeJS I will learn Mongobd</p>
+    </div>
+
+</div>
 
 </section>
     </main>
     <footer>
-
+<header class="footer-header">
+<div class="items">
+    <h2>I need suport</h2>
+    <p>I need support to leran programing languages....</p>
+     <input type="search" name="" id="" placeholder="search here">
+    <input type="submit" value="Submit">
+    </header>
+</div>
     </footer>
 </body>
 </html>
