added dooter header

--- a/index.html
+++ b/index.html
@@ -176,10 +176,14 @@
     <footer>
 <header class="footer-header">
 <div class="items">
-    <h2>I need suport</h2>
+    <div class="text-f">
+        <h2>I need suport</h2>
     <p>I need support to leran programing languages....</p>
-     <input type="search" name="" id="" placeholder="search here">
-    <input type="submit" value="Submit">
+    </div>
+     <div class="btn-footer">
+        <input class="seacrch" type="search" name="" id="" placeholder="search here">
+    <input class="submit" type="submit" value="Submit">
+     </div>
     </header>
 </div>
     </footer>
