finished the footer

--- a/index.html
+++ b/index.html
@@ -184,8 +184,20 @@
         <input class="seacrch" type="search" name="" id="" placeholder="search here">
     <input class="submit" type="submit" value="Submit">
      </div>
+    </div>
     </header>
+<div class="footer">
+<div class="footer-items">
+    <p>A open commitment by Alwad Hoosain</p>
+
 </div>
-    </footer>
+<div class="footer-img">
+    <img src="./assets/facebook.png" alt="">
+    <img src="./assets/github.png" alt="">
+    <img src="./assets/linkedin-icon 1.png" alt="">
+
+</div>
+</div>
+</footer>
 </body>
 </html>
