--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>"In the near future, I hope to become a Developer."</p></div>
 
 <div class="header-content">
-<p>Programming languages are universal and is applicable even when you are working in another country. Some other careers are more geographically-bounded i.e. professional jobs require qualification transfer, business positions require your knowledge in that specific country...</p>
+<p>Programming languages are universal and is applicable even when you are working in another country.</p>
 
 </div>
  <a href=""><button id="nav-button">Contact with me</button></a>
@@ -116,18 +116,21 @@
     <img  class="current-skill-img" src="./assets/html.png" alt="">
 <h2 class="cureent-skill-header">HTML</h2>
 <p class="cureent-skill-paragraph">1st i will learn HTMl</p>
+<a class="learn"  href="">Learn more</a>
 
 </div>
 <div class="cureent-skill-2">
     <img  class="current-skill-img" src="./assets/css.png" alt="">
     <h2 class="cureent-skill-header">CSS</h2>
     <p class="cureent-skill-paragraph">After completing HTMl I will learn CSS</p>
+    <a class="learn" href="">Learn more</a>
     
     </div>
     <div class="cureent-skill-3">
         <img  class="current-skill-img" src="./assets/js.png" alt="">
         <h2 class="cureent-skill-header">Java Script</h2>
         <p class="cureent-skill-paragraph">After completing CSS I will Learn Java Script</p>
+        <a class="learn" href="">Learn more</a>
         
         </div>
   </div>
@@ -158,6 +161,7 @@
     <div class="learning-item">
  <h2>NodeJs</h2>
  <p>After learning ReactJs I will learn NodeJS</p>
+
     </div>
 </div>
 <div class="next-target-description">
